epub upload, cover image upload, preview image upload done

--- a/app/assets/stylesheets/style.default.css
+++ b/app/assets/stylesheets/style.default.css
@@ -4119,3 +4119,9 @@ div.error label.error:before {
 .redrow{
       background-color: #FFCCCC;
    }
+
+.single_document_div{
+   width: 150px;
+   height: 150px;
+   float: left;
+}
