--- a/app/views/classrooms/index.html.erb
+++ b/app/views/classrooms/index.html.erb
@@ -25,10 +25,10 @@
               </thead>
               <tbody>
 				 <% @classrooms.each do |classroom| %>
-				    <tr class="odd gradeX">
+				    <tr class="odd gradeX" data-no-turbolink>
                  	  <td class=""><%= check_box_tag 'classroom_ids[]', classroom.id, false, :class => "check-box" %></td>	
                       <td class=""><%= classroom.code %></td>
-                      <td class=""><%= classroom.name %></td>
+                      <td class=""><%= link_to classroom.name, classroom_path(classroom, :school_id=>@school.id), :title=>"View Classroom Details" %></td>
 					  <td class="">
 						  <% unless classroom.school_year_start_date.blank? || classroom.school_year_end_date.blank? %>
 						      <%= classroom.school_year_start_date.year %> - <%= classroom.school_year_end_date.year %>
@@ -37,7 +37,7 @@
 					  <td class=""><%=  %></td>
 					  <td class=""><%=  %></td>
 					  <td class=""><%=  %></td>
-                      <td data-no-turbolink>
+                      <td>
 						  <% if can? :update, :classrooms %>
 						      <%= link_to '<i title="Edit Classroom" class="fa fa-pencil"></i>'.html_safe, edit_classroom_path(:id=>classroom, :school_id=>@school.id) %> 						  
 						  <%end%>
