--- a/app/views/classrooms/show.html.erb
+++ b/app/views/classrooms/show.html.erb
@@ -2,7 +2,7 @@
 	<div class="col-md-12">
     	<div class="panel panel-default">
         	<div class="panel-heading">
-            	<h4 class="panel-title">Classroom Information</h4>
+            	<h4 class="panel-title">Classroom Details</h4>
         	</div>
         	<div class="panel-body">
             	<address>
