--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
 		<!-- <li id="li_dashboard"><%= link_to '<i class="fa fa-home"></i>'.html_safe + "Dashboard", root_path %></li> -->
 		 <!-- <span class="arrow arrw-pos" container_li="li_dashboard"></span> -->
 		
-		
+		<% if current_user.is_web_admin?%>
 		<li class="nav-parent" id="li_school"><a href=""><i class="glyphicon glyphicon-book"></i> <span>School</span></a>
 			<span class="arrow arrw-pos" container_li="li_school"></span>
           <ul class="children">
@@ -52,7 +52,7 @@
 			 <%end%>
          </ul>
         </li>
-		<% if current_user.is_web_admin?%>
+		
 		<li class="nav-parent" id="li_webadmin"><%= link_to '<i class="glyphicon glyphicon-user"></i>'.html_safe + "Web Admin", root_path %>
 			<span class="arrow arrw-pos" container_li="li_webadmin"></span>
           <ul class="children">
@@ -69,12 +69,49 @@
             <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Access Right List", accessrights_path %></li>
           </ul>
         </li>
+		
+		<%else%>
+		<li class="nav-parent" id="li_accessright"><a href=""><i class="fa fa-chevron-circle-down"></i> <span>Options</span></a>
+			<span class="arrow arrw-pos" container_li="li_options"></span>
+          <ul class="children">
+			<% if (can? :create, :users) && (can? :create_sa, :users) %>  
+            <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Add School Admin", new_user_path(:role_id =>Role.where("name='School Admin'").last, :school_id=>current_user.school_id) %></li>
+			<%end%>
+			<% if (can? :read, :users) && (can? :read_sa, :users) %>  
+            <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "School Admin Listing", users_path(:role_id => Role.where("name='School Admin'").last, :school_id=>current_user.school_id) %></li>
+			<%end%>
+			<% if (can? :create, :users) && (can? :create_teacher, :users) %>  
+            <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Add Teacher", new_user_path(:role_id =>Role.where("name='Teacher'").last, :school_id=>current_user.school_id) %></li>
+			<%end%>
+			<% if (can? :read, :users) && (can? :read_teacher, :users) %>  
+            <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Teacher Listing", users_path(:role_id => Role.where("name='Teacher'").last, :school_id=>current_user.school_id) %></li>
+			<%end%>
+			<% if (can? :create, :users) && (can? :create_student, :users) %>  
+            <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Add Student", new_user_path(:role_id =>Role.where("name='Student'").last, :school_id=>current_user.school_id) %></li>
+			<%end%>
+			<% if (can? :read, :users) && (can? :read_student, :users) %>  
+            <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Student Listing", users_path(:role_id => Role.where("name='Student'").last, :school_id=>current_user.school_id) %></li>
+			<%end%>
+			<% if can? :create, :classrooms %>  
+            <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Add Classroom", new_classroom_path(:school_id => current_user.school_id) %></li>
+			<%end%>
+			<% if can? :read, :classrooms %>  
+            <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Classroom Listing", classrooms_path(:school_id => current_user.school_id) %></li>
+			<%end%>
+			<% if can? :create, :licenses%>  
+            <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Add License", new_license_path(:school_id => current_user.school_id) %></li>
+			<%end%>
+			<% if can? :read, :licenses %>  
+            <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Licenses Listing", licenses_path(:school_id => current_user.school_id) %></li>
+			<%end%>
+          </ul>
+        </li>
 		<%end%>
       </ul>
     </div>
   </div>
   <div class="mainpanel">
-    <div class="headerbar">
+    <div class="headerbar" data-no-turbolink>
       <!-- <a class="menutoggle"><i class="fa fa-bars"></i></a> -->
       <div class="header-right">
         <ul class="headermenu">
@@ -86,6 +123,11 @@
                 <span class="caret"></span>
               </button>
               <ul class="dropdown-menu dropdown-menu-usermenu pull-right">
+				<% if current_user.role.name.eql?('Web Admin')%>  
+				    <li><%= link_to '<i class="glyphicon glyphicon-user"></i>'.html_safe + "My Profile", user_path(current_user, :role_id=>current_user.role_id) %></li>  
+				<%else%>
+				    <li><%= link_to '<i class="glyphicon glyphicon-user"></i>'.html_safe + "My Profile", user_path(current_user, :role_id=>current_user.role_id, :school_id=>current_user.school_id) %></li>  
+				<%end%>
 				<li><%= link_to '<i class="glyphicon glyphicon-log-out"></i>'.html_safe + "Log Out", signout_path, method: :delete %></li>
               </ul>
             </div>
