--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag 'users/delete_user', remote: true do %>
+<%= form_tag 'users/delete_user' do %>
   <div class="panel panel-default">
 	<div class="panel-body"> 
 	  <div class="index_page_btns" data-no-turbolink>
@@ -31,7 +31,7 @@
 		<table class="table" id="users_table">
             <thead>
                 <tr>
-                	<th>Remove all &nbsp; <%= check_box_tag 'user_id[]', '', false, :class => "select-all-user" %></th>
+                	<th><%= link_to :All, 'javascript:checkAllUsers()', :class => "lnk-typ1" %> | <%= link_to :None, 'javascript:uncheckAllUsers()', :class => "lnk-typ2" %></th>
                     <th>First Name</th>
                     <th>Last Name</th>
                     <th>Email</th>
