added default scope and concern for delete_flag query and student image upload

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Books That Grow</title>
-<link rel="shortcut icon" href="favicon.png" type="image/png">
+<!-- <link rel="shortcut icon" href="favicon.png" type="image/png"> -->
 
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
