--- a/app/views/users/_change_password.html.erb
+++ b/app/views/users/_change_password.html.erb
@@ -33,7 +33,7 @@
 		            </div>
 			    </div>
 	        <div>
-	            <%= f.submit "Save", class: "btn btn-primary btn-xs"%>
+	            <%= f.submit "Change Password", class: "btn btn-primary btn-xs"%>
 				<button type="button" class="btn btn-default btn-xs" data-dismiss="modal">Close</button>
 	        </div>
 			<% end %>
