--- a/app/views/layouts/login.html.erb
+++ b/app/views/layouts/login.html.erb
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
   <meta name="description" content="">
   <meta name="author" content="">
-  <link rel="shortcut icon" href="images/favicon.png" type="image/png">
+  <!-- <link rel="shortcut icon" href="images/favicon.png" type="image/png"> -->
 
   <title>Books That Grow</title>
   <%= stylesheet_link_tag "style.default.css" %>
