--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -5,7 +5,7 @@
 	        	<p>Please enter all mandatory (<span class="asterisk">*</span>) fields.</p>
 	        </div>
 	        <div class="panel-body">
-	        	<%= form_for @user, :html=>{:class=>"form_validation user_form"} do |f| %>
+	        	<%= form_for @user, :html=>{:class=>"form_validation user_form", multipart: true} do |f| %>
 				    <%=f.hidden_field :role_id, :value=>@role_id.id%>
 					<%=f.hidden_field :school_id, :value=>@school.id unless params[:school_id].blank?%>
 					<% if @user.errors.any? %>
