--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -214,6 +214,26 @@ $(".download_sample").click(function(){
 	$(".sample_list_links_div").children('div').not("#"+list_type).hide();
 
 });
+
+$('#changePassword').click(function() {
+	$(".form_validation").validate({
+		rules: {
+			"user[password]":{ minlength: 5, required: true} ,
+			"user[password_confirmation]":{ minlength: 5, required: true, equalTo: "#user_password"} 
+		},
+		messages: {
+			"user[password]":{
+				required: "Please provide a password",
+				minlength: "Your password must be at least 5 characters long."
+			},
+			"user[password_confirmation]": {
+				required: "Please provide a password",
+				minlength: "Your password must be at least 5 characters long.",
+				equalTo: "Please enter the same password as above."
+			}
+		}
+		});
+});
 </script>
 
 
