--- a/app/views/licenses/_licenses_info.html.erb
+++ b/app/views/licenses/_licenses_info.html.erb
@@ -11,16 +11,16 @@
 					    <th>Action</th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody >
 			        <% @licenses.each do |lic| %>
 	                    <tr class="odd gradeX">
 							<td class=""><%= lic.license_batch_name %></td>
 	                        <td class=""><%= lic.no_of_licenses %></td>
 						    <!-- <td class=""><%#= lic.used_licenses %></td> -->
 	                        <td class=""><%= lic.expiry_date %></td>
-						    <td>
+						    <td data-no-turbolink>
 								<% if can? :update, :licenses %> 
-						            <%= link_to '<i title="Edit License" class="fa fa-pencil"></i>'.html_safe, edit_license_path(:id=>lic, :school_id=>lic.school_id), :remote=>true%> 
+						            <%= link_to '<i title="Edit License" class="fa fa-pencil"></i>'.html_safe, edit_license_path(:id=>lic, :school_id=>lic.school_id), :remote=>true %> 
 								<%end%>
 								<% if can? :destroy, :licenses %> 
 						            <%= link_to '<i title="Archive License" class="glyphicon glyphicon-trash"></i>'.html_safe, lic, method: :delete, data: { confirm: 'Are you sure?' }, :remote=>true %>	
