--- a/app/views/licenses/_form.html.erb
+++ b/app/views/licenses/_form.html.erb
@@ -54,7 +54,7 @@
 			<% end %>
 	    </div>
     </div>       
-
+</div>
 <script type="text/javascript">
 $(document).ready(function() {
 	showHideMenu('li_school');
