addedd logged_in? in all controllers, managed all accessrights

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -74,6 +74,12 @@
 		<li class="nav-parent" id="li_accessright"><a href=""><i class="fa fa-chevron-circle-down"></i> <span>Options</span></a>
 			<span class="arrow arrw-pos" container_li="li_options"></span>
           <ul class="children">
+	        <% if can? :create, :schools %>
+		    <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Add School", new_school_path %></li>
+		    <%end%>
+		    <% if can? :read, :schools %>
+		    <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "School List", schools_path %></li>
+		    <%end%>     
 			<% if (can? :create, :users) && (can? :create_sa, :users) %>  
             <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Add School Admin", new_user_path(:role_id =>Role.where("name='School Admin'").last, :school_id=>current_user.school_id) %></li>
 			<%end%>
@@ -86,10 +92,10 @@
 			<% if (can? :read, :users) && (can? :read_teacher, :users) %>  
             <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Teacher Listing", users_path(:role_id => Role.where("name='Teacher'").last, :school_id=>current_user.school_id) %></li>
 			<%end%>
-			<% if (can? :create, :users) && (can? :create_student, :users) %>  
+			<% if (((can? :destroy, :users) && (can? :destroy_student, :users)) || ((can? :destroy, :users) && (can? :manage_student, :users))) %>  
             <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Add Student", new_user_path(:role_id =>Role.where("name='Student'").last, :school_id=>current_user.school_id) %></li>
 			<%end%>
-			<% if (can? :read, :users) && (can? :read_student, :users) %>  
+			<% if ((can? :read, :users) && (can? :read_student, :users)) || ((can? :read, :users) && (can? :manage_student, :users)) %>  
             <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Student Listing", users_path(:role_id => Role.where("name='Student'").last, :school_id=>current_user.school_id) %></li>
 			<%end%>
 			<% if can? :create, :classrooms %>  
