--- a/app/views/users/_change_password.html.erb
+++ b/app/views/users/_change_password.html.erb
@@ -32,7 +32,7 @@
 		                </div>
 		            </div>
 			    </div>
-	        <div>
+	        <div class="panel-footer" data-no-turbolink>
 	            <%= f.submit "Change Password", class: "btn btn-primary btn-xs"%>
 				<button type="button" class="btn btn-default btn-xs" data-dismiss="modal">Close</button>
 	        </div>
