--- a/app/views/users/_common_fields.html.erb
+++ b/app/views/users/_common_fields.html.erb
@@ -26,6 +26,17 @@
 	                    </div>
 	                </div>
 				</div>	
+				<% if @role_id.name.eql?('Student')%>
+				<div class="row">	
+	                <div class="col-sm-6">
+	                    <div class="form-group">
+		   			    	<%= f.label :email, :class=>"control-label"%>
+		   			    	<%= f.text_field :email, :class=>"form-control email_validation" %>
+							<span class="help-inline error_box"></span>
+	                    </div>
+	                </div>
+	            </div>
+				<%else%>
 				<div class="row">	
 	                <div class="col-sm-6">
 	                    <div class="form-group">
@@ -35,6 +46,7 @@
 	                    </div>
 	                </div>
 	            </div>
+				<%end%>
 				<% unless ('new').eql?action_name%>
 				    <% unless (@role_id.name.eql?('Web Admin') || @user.license_expiry_date.blank?)%>
 					    <div class="row">
